# tfm_uoc_efficient_data_augmentation_for_object_detection

./: .gitignore  README.md  change_labels.ipynb  charts.ipynb  dataset_balancer.ipynb  dataset_stats.ipynb  dataset_transfer.ipynb  diffusion_generation.ipynb  domain_shift_analysis.ipynb  evaluate_grounded_sam.ipynb  groundedsam_labeling copy 2.ipynb  groundedsam_labeling copy.ipynb  prompt_generation.ipynb  pyproject.toml  requirements.txt
.ipynb_checkpoints/: README-checkpoint.md  change_labels-checkpoint.ipynb  charts-checkpoint.ipynb  dataset_balancer-checkpoint.ipynb  dataset_conversion-checkpoint.py  domain_shift_analysis-checkpoint.ipynb  evaluate_grounded_sam-checkpoint.ipynb  experiments-checkpoint.ipynb  groundedsam_labeling copy-checkpoint.ipynb  groundedsam_labeling-checkpoint.ipynb  groundingdino_transformers_compat-checkpoint.py  prompt_generation-checkpoint.ipynb  sam3_labeling-checkpoint.ipynb  sam3_labeling_single_category-checkpoint.ipynb
datasets/HOMEOBJECTS-MIX/: data.yaml
datasets/VOC/: data.yaml  vanilla.yaml
datasets/VOC_MIX/: VOC_MIX.yaml
datasets/VOC_MIX(1000:15000)/: VOC_MIX.yaml
datasets/coco_subset_5k/: prompts.csv
datasets/fernando_mix(full:full)/: data.yaml
datasets/sAFRICANWILDLIFE_FLUXFP8/: prompts.csv
datasets/sFERNANDO_FLUX29B/: prompts.csv
datasets/sHOMEOBJECTS_FLUXFP8/: home_objects_prompts.csv  prompts.csv
datasets/sVOC_FLUXFP8/: prompts.csv
training/: eval.ipynb  yolo_inference.ipynb  yolo_training_1.ipynb  yolo_training_4.ipynb
training_flux/: caption_extractor.py  data_preparation.ipynb  preparation.py
(+195939 files in other folders)
